--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "",
+        "start": "gulp start",
         "test": ""
     },
     "author": "Hibikine Kage",
@@ -18,6 +18,7 @@
         "redux": "^3.7.2"
     },
     "devDependencies": {
+        "babel": "^6.23.0",
         "babel-core": "^6.25.0",
         "babel-loader": "^7.1.1",
         "babel-preset-es2015": "^6.24.1",
