--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
         "gulp": "^3.9.1",
+        "gulp-sass": "^3.1.0",
         "gulp-webpack": "^1.5.0",
         "webpack": "^3.4.1"
     }
