--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "react-dom": "^15.6.1",
         "react-redux": "^5.0.5",
         "react-tap-event-plugin": "^2.0.1",
-        "redux": "^3.7.2"
+        "redux": "^3.7.2",
+        "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.2.0"
     },
     "devDependencies": {
         "babel": "^6.23.0",
